--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "react": "^18",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
-    "react-dom": "^18",
+    "@tanstack/react-query": "^5.28.9",
+    "fast-xml-parser": "^4.3.6",
     "next": "14.1.3",
-    "react-hot-toast": "^2.4.1"
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "rss": "^1.2.2",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
