--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "rss": "^1.2.2",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
