--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@tanstack/react-query": "^5.28.9",
+    "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.6.8",
     "fast-xml-parser": "^4.3.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
